--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ android {
     kapt {
         correctErrorTypes true
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -53,7 +57,7 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
     //Retrofit
-    def retrofit_version = "2.4.0"
+    def retrofit_version = "2.6.0"
     def okhttp_version = "4.2.1"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
